[package]
name = "block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
sha2 = { version = "0.10.2", default-features = false }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
libp2p = "0.46.1"
tokio = { version = "1.19.2" }
hex = "0.4.3"
once_cell = "1.13.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"